DTS-42839: BE code exclude active sprint form backlog KPI's Change-log: Exclude active sprint data from Backlog KPI's