@@ -34,7 +34,6 @@ import org.springframework.stereotype.Component;
 
 import com.publicissapient.kpidashboard.apis.appsetting.service.ConfigHelperService;
 import com.publicissapient.kpidashboard.apis.common.service.impl.CommonServiceImpl;
-import com.publicissapient.kpidashboard.apis.enums.Filters;
 import com.publicissapient.kpidashboard.apis.enums.KPICode;
 import com.publicissapient.kpidashboard.apis.enums.KPIExcelColumn;
 import com.publicissapient.kpidashboard.apis.enums.KPISource;
@@ -59,7 +58,7 @@ import lombok.extern.slf4j.Slf4j;
 
 /**
  * Epic Progress kpi to get release issues on the basis of epic
- * 
+ *
  * @author shi6
  */
 @Slf4j
@@ -93,7 +92,7 @@ public class BacklogEpicProgressServiceImpl extends JiraBacklogKPIService<Intege
 
 	/**
 	 * project wise processing
-	 * 
+	 *
 	 * @param leafNode
 	 *            leafNode
 	 * @param kpiElement
@@ -140,11 +139,12 @@ public class BacklogEpicProgressServiceImpl extends JiraBacklogKPIService<Intege
 			List<JiraIssue> totalJiraIssue = getBackLogJiraIssuesFromBaseClass();
 			resultListMap.put(TOTAL_ISSUES, totalJiraIssue);
 			// get Epics Linked to backlogStories stories
-			resultListMap.put(EPIC_LINKED,
-					jiraIssueRepository.findNumberInAndBasicProjectConfigIdAndTypeName(
-							totalJiraIssue.stream().map(JiraIssue::getEpicLinked).collect(Collectors.toList()),
-							leafNode.getProjectFilter().getBasicProjectConfigId().toString(),
-							NormalizedJira.ISSUE_TYPE.getValue()));
+			final List<String> epicKeyList = totalJiraIssue.stream().map(JiraIssue::getEpicLinked).toList();
+			Set<JiraIssue> epicJiraIssues = totalJiraIssue.stream()
+					.filter(j -> epicKeyList.contains(j.getNumber())
+							&& j.getTypeName().equalsIgnoreCase(NormalizedJira.ISSUE_TYPE.getValue()))
+					.collect(Collectors.toSet());
+			resultListMap.put(EPIC_LINKED, epicJiraIssues);
 			// get status category of the project
 			resultListMap.put(RELEASE_JIRA_ISSUE_STATUS, getJiraIssueReleaseStatus());
 		}
@@ -209,7 +209,7 @@ public class BacklogEpicProgressServiceImpl extends JiraBacklogKPIService<Intege
 	}
 
 	/**
-	 * 
+	 *
 	 * @param jiraIssueList
 	 *            jiraIssueList
 	 * @param jiraIssueReleaseStatus
@@ -266,7 +266,7 @@ public class BacklogEpicProgressServiceImpl extends JiraBacklogKPIService<Intege
 
 	/**
 	 * create drill down
-	 * 
+	 *
 	 * @param issueCountStatusMap
 	 *            issueCountStatusMap
 	 * @param releaseStatus
@@ -293,7 +293,7 @@ public class BacklogEpicProgressServiceImpl extends JiraBacklogKPIService<Intege
 	/**
 	 * sort in reverse order on the basis of those epic whose to do and in progress
 	 * issues are more should appear first
-	 * 
+	 *
 	 * @param dataCountList
 	 */
 	void sorting(List<DataCount> dataCountList) {
